# SequentialChessPredictor

./: .gitignore  builder_notebook.ipynb  pyproject.toml
