[tool.poetry]
name = "SequentialChessPredictor"
version = "0.1.0"
description = ""
authors = ["Justin Fischer <jfischer@adadapted.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.0"
pandas = "^1.5.2"
tqdm = "^4.64.1"
asyncio = "^3.4.3"
tensorflow = "^2.11.0"
kaggle = "^1.5.12"
chess = "^1.9.4"
polars = "^0.15.8"

[tool.poetry.dev-dependencies]
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
